--- a/task-4/index.html
+++ b/task-4/index.html
@@ -6,6 +6,6 @@
    <title>Document</title>
 </head>
 <body>
-   <script src="./task-6.js"></script>
+   <script type="module" src="./task-4.js"></script>
 </body>
 </html>
