--- a/task-18/index.html
+++ b/task-18/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>18</title>
 </head>
 <body>
    <script type="module" src="./task-18.js"></script>
